# FastSegmentator

./: .gitignore  INFERENCE_GUIDE.md  NOTICE  PLAN.md  README.md  cli.py  compute_dsc.py  download_totalseg_weights.py  nnunet_infer_nii.py  nnunet_infer_nii_tensorRT.py  plain_unet.py  pyproject.toml  refactor_log.txt  requirements.txt  totalseg_ct_infer.py  totalseg_infer.py  totalseg_modes.html  totalseg_mr_infer.py
dynamic_network_architectures/building_blocks/: unet_decoder.py
ext_trainers/: nnUNetTrainerDA5.py
fastsegmentator/: __init__.py  cli.py  nnunet_infer_nii.py  totalseg_infer.py
fastsegmentator/_vendor/: __init__.py
fastsegmentator/_vendor/nnunetv2/: configuration.py  paths.py
fastsegmentator/_vendor/nnunetv2/extTrainer/: nnUNetCLSTrainer.py
fastsegmentator/_vendor/nnunetv2/imageio/: natural_image_reader_writer.py  nibabel_reader_writer.py  reader_writer_registry.py  simpleitk_reader_writer.py  tif_reader_writer.py
fastsegmentator/_vendor/nnunetv2/inference/: data_iterators.py  export_prediction.py  predict_from_raw_data.py
fastsegmentator/_vendor/nnunetv2/postprocessing/: gpu_postprocessing.py
fastsegmentator/_vendor/nnunetv2/preprocessing/cropping/: cropping.py
fastsegmentator/_vendor/nnunetv2/preprocessing/normalization/: default_normalization_schemes.py  map_channel_name_to_normalization.py
fastsegmentator/_vendor/nnunetv2/preprocessing/preprocessors/: default_preprocessor.py
fastsegmentator/_vendor/nnunetv2/preprocessing/resampling/: default_resampling.py  resample_torch.py  utils.py
fastsegmentator/_vendor/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py
fastsegmentator/_vendor/nnunetv2/training/nnUNetTrainer/variants/data_augmentation/: nnUNetTrainerNoMirroring.py
fastsegmentator/_vendor/nnunetv2/training/nnUNetTrainer/variants/loss/: nnUNetTrainerTopkLoss.py
fastsegmentator/_vendor/nnunetv2/utilities/: dataset_name_id_conversion.py  file_path_utilities.py  find_class_by_name.py  get_network_from_plans.py  utils.py
fastsegmentator/_vendor/nnunetv2/utilities/label_handling/: label_handling.py
fastsegmentator/_vendor/nnunetv2/utilities/plans_handling/: plans_handler.py
fastsegmentator/_vendor/totalsegmentator/: __init__.py  libs.py  postprocessing.py
nnUNet/nnunetv2/architecture/: BuildModel.py  plain_unet.py  repvgg_unet.py  repvggplus.py
nnUNet/nnunetv2/extTrainer/: nnUNetCLSTrainer.py
nnUNet/nnunetv2/preprocessing/cropping/: cropping.py
nnUNet/nnunetv2/preprocessing/normalization/: default_normalization_schemes.py
nnUNet/nnunetv2/preprocessing/preprocessors/: default_preprocessor.py
nnUNet/nnunetv2/preprocessing/resampling/: default_resampling.py
nnUNet/nnunetv2/training/loss/: dice.py
nnUNet/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer_variants.py
nnUNet/nnunetv2/training/nnUNetTrainer/variants/loss/: nnUNetTrainerTopkLoss.py
report/: README.md  STAGE2_VALIDATION_PLAN.md  diff_examples.html  gen_figures.py  gen_landing.py  gen_report.py  index.html  index_artifact.html  stage2_abdmus_n10.csv  stage2_liver187_parity.csv  stage2_liver_lesions_robust.csv  stage2_lungvessels_robust.csv  stage2_lungvessels_vessel12.csv  stage2_parity.csv  stage2_parity_current.csv  stage2_parity_n10.csv  stage2_sepz_parity.csv  stage2_teeth_toothfairy3.csv  stage2_timing_sub5x.csv  validation_report.html
src/nnunetv2/preprocessing/cropping/: cropping.py
src/nnunetv2/preprocessing/resampling/: default_resampling.py
src/nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py
src/nnunetv2/training/nnUNetTrainer/variants/data_augmentation/: nnUNetTrainerNoMirroring.py
src/nnunetv2/utilities/: utils.py
tests/: test_pipeline_robustness.py
totalsegmentator/: __init__.py
